Consulta final de produtos e categorias com JOIN FETCH