@@ -1,12 +1,14 @@
 package com.devsuperior.dscatalog.services;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import com.devsuperior.dscatalog.projections.ProductProjection;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
@@ -95,7 +97,19 @@ public class ProductService {
 	}
 
 	@Transactional(readOnly = true)
-	public Page<ProductProjection> testQuery(Pageable pageable) {
-		return repository.searchProducts(Arrays.asList(1L, 3L), "", pageable);
+	public Page<ProductDTO> findAllPaged(String name, String categoryId, Pageable pageable) {
+
+		List<Long> categoryIds = List.of();
+		if(!"0".equals(categoryId)) {
+			categoryIds = Arrays.stream(categoryId.split(",")).map(Long::parseLong).toList();
+		}
+		
+		Page<ProductProjection> page = repository.searchProducts(categoryIds, name, pageable);
+		List<Long> productIds = page.map(ProductProjection::getId).toList();
+
+		List<Product> entities = repository.searchProductsWithCategories(productIds);
+		List<ProductDTO> dtos = entities.stream().map(x -> new ProductDTO(x,x.getCategories())).toList();
+
+        return new PageImpl<>(dtos, page.getPageable(), page.getTotalElements());
 	}
 }
